syntax = "proto2";

package com.example.transactions;

import "zio-temporal.proto";

message ProceedTransactionCommand {
  required zio.temporal.protobuf.UUID id = 1;
  required zio.temporal.protobuf.UUID sender = 2;
  required zio.temporal.protobuf.UUID receiver = 3;
  required zio.temporal.protobuf.BigDecimal amount = 4;
}

message ConfirmTransactionCommand {
  required zio.temporal.protobuf.UUID id = 1;
  required string confirmationCode = 2;
}

message CancelTransactionCommand {
  required zio.temporal.protobuf.UUID id = 1;
}

enum TransactionStatus {
  Created = 0;
  InProgress = 1;
  Succeeded = 2;
  Failed = 3;
}

message TransactionView {
  required zio.temporal.protobuf.UUID id = 1;
  required TransactionStatus status = 2;
  required string description = 3;
  required zio.temporal.protobuf.UUID sender = 4;
  required zio.temporal.protobuf.UUID receiver = 5;
  required zio.temporal.protobuf.BigDecimal amount = 6;
}
